tests/baselines/reference/restArgAssignmentCompat.errors.txt
tests/cases/compiler/restArgAssignmentCompat.ts(7,1): error TS2322: Type '(...x: 数字[]) => 无值' is not assignable to type '(x: 数字[], y: 文字) => 无值'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '数字[]' is not assignable to type '数字'.


==== tests/cases/compiler/restArgAssignmentCompat.ts (1 errors) ====
    function f(...x: number[]) {
        x.forEach((n, i) => void ('item ' + i + ' = ' + n));
    }
    function g(x: number[], y: string) { }
    
    var n = g;
    n = f;
    ~
!!! error TS2322: Type '(...x: 数字[]) => 无值' is not assignable to type '(x: 数字[], y: 文字) => 无值'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '数字[]' is not assignable to type '数字'.
    n([4], 'foo');
    